[package]
name = "homelabdns"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4.38", features = ["serde"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
serde_json = "1.0.133"